--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
 <body onload="fonloadmio();">
 <div id="idtodo">
 
-
-    <script type='text/javascript'>id='60351'; width='100%'; height='100%';</script><script type='text/javascript' src='https://embed.telerium.tv/embed.js'></script>
-
-
+    <script type='text/javascript'> width='100%', height='100%', id='directvsports';</script><script type='text/javascript' src='http://embed.futboltv-envivo.com/embed.js'></script>
 
 </div>
 
@@ -30,7 +27,6 @@
 function fonloadmio(){
 
 
-    alert("listo");
 }
 
 </script>
