--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         left: 0%;
         width: 100%;
         height: 100%;
-        background-color: aqua;
+        background-color: rgb(0, 0, 0);
     }
 
     #idregresar{
