--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         z-index: 20;
     }
 
-.clesta{
+.clesta{ position: absolute;
+        top: 0%;
+        left:0%;
+        width:100%;
+        height:100%;
 z-index: 2;
     }
 
@@ -46,7 +50,19 @@ z-index: 2;
 
 <div id="idtodo">
 
-    <script class="clesta" type='text/javascript'>id='61039'; width='100%'; height='100%';</script><script type='text/javascript' src='https://embed.telerium.tv/embed.js'></script>
+   
+ 
+
+      <iframe   class="clesta" id="idiframe" 
+      src="https://ok.ru/video/1594467425904"
+       frameborder="0" 
+       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+         allowfullscreen="false" webkitallowfullscreen="false" mozallowfullscreen="false" 
+            allowfullscreen="false"><div id="idocultaeso"></div></iframe>
+                  
+
+
+
 
 
     <button id="idregresar" onclick="myFunction()">salir</button>
