--- a/index.html
+++ b/index.html
@@ -54,15 +54,12 @@ z-index: 2;
  
 
       <iframe   class="clesta" id="idiframe" 
-      src="https://ok.ru/video/1594467425904"
+      src="https://ok.ru/videoembed/1594467425904"
        frameborder="0" 
        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
          allowfullscreen="false" webkitallowfullscreen="false" mozallowfullscreen="false" 
             allowfullscreen="false"><div id="idocultaeso"></div></iframe>
                   
-
-
-
 
 
     <button id="idregresar" onclick="myFunction()">salir</button>
