--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ $(document).ready(function(){
   try {
       
     $("#idaca").load("https://soloveo.com/espn3hd.php",function(datas){
-       $(this).html(datas);   
+       $(this).html(datas);  
+       alert("no carga"); 
         });
   } catch (error) {
       alert(error);
