--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
       
     $("#idaca").load("https://soloveo.com/espn3hd.php",function(datas){
        $(this).html(datas);  
-       alert("no carga"); 
+       alert(String(console.log())); 
         });
   } catch (error) {
       alert(error);
