--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 $(document).ready(function(){
   $("button").click(function(){
   
-        $("#idaca").load("http://123stream-tv2.blogspot.com/p/blog-page_60.html",function(datas){
+        $("#idaca").load("https://unonibes4a.github.io/c1/",function(datas){
        $(this).html(datas);   
         });
 
